<resources>
    <string name="app_name">Admin RP</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="start_time">Date</string>
    <string name="end_time">End Time</string>
    <string name="manager_id">Manager ID</string>
    <string name="manager_name">Manager Name</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="e_mail">E-mail</string>
    <string name="machine_id">ID</string>
    <string name="machine_serial_number">Serial number</string>
    <string name="machine_purchase_date">Purchase Date</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="salary">Salary</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="hire_date">Hire Date</string>
    <string name="nationalId">National ID</string>
    <string name="add_user">Add User</string>
    <string name="add_project">Add Project</string>
    <string name="add_machine">Add Machine</string>
    <string name="summary">Summary</string>
    <string name="vacations_log">Vacations Log</string>
    <string name="vacation_requests">Vacation Requests</string>
    <string name="openNavBar">Open navigation drawer</string>
    <string name="closeNavBar">Close navigation drawer</string>
    <string name="users">Users</string>
    <string name="projects">Projects</string>
    <string name="machines">Machines</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="phone">Phone</string>
    <string name="contractType">ContractType</string>
    <string name="AddClient">Client</string>
    <string name="company_name">Company Name</string>
    <string name="company_email">Company Email</string>
    <string name="company_phone_number">Company Phone Number</string>
    <string name="done">Done</string>
    <string name="note">Notes</string>
    <string name="reference">Reference</string>
    <string name="office_work">Office Work</string>
    <string name="add_supplements">Add Accessories</string>
    <string name="SupplementName">Name</string>
    <string name="machine_allowance">Allowance</string>
    <string name="perDay">A Day</string>
    <string name="PerWeek">A Week</string>
    <string name="PerMonth">A Month</string>
    <string name="AddAllowance">Allowances</string>
    <string name="reason_for">Reason For:</string>
    <string name="_0_00">0.0</string>
    <string name="Mount">Mount</string>
    <string name="AreUSure">Are You sure?</string>
    <string name="Delete">Delete</string>
    <string name="accept_request">Accept</string>
    <string name="Decline_request">Decline</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="admin">Admin</string>
    <string name="admin_register_title">Admin Authorities</string>
    <string name="temporary">Temporary</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="insurance_amount">Insurance Amount</string>
    <string name="month">Month</string>
    <string name="per_hour">Per Hour</string>
    <string name="over_time">Over Time</string>
    <string name="per_friday">Per Friday</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="retry">Retry</string>
    <string name="machine_log">Machine Log</string>
    <string name="no_log_to_display">No Log to Display</string>
    <string name="allowance_type">Type</string>
    <string name="unpaid_days">Unpaid Days</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IGEC</string>
    <string name="nav_header_subtitle">www.igeccorp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="plus_code">Plus Code</string>
    <string name="diameter">Area (m²)</string>
    <string name="currency">Currency</string>

    <string name="vacation_request_channel_name">Vacation Requests</string>
    <string name="vacation_request_channel_description">get notified when employees send vacation requests</string>
    <string name="manager">Manager</string>
    <string name="hours">Hours</string>
    <string name="employees">Employees</string>
    <string name="hours_limit">Are you sure you want to set %s hours</string>
    <string name="hours_limit_change">Are you sure you want to change hours from %s to %s</string>
    <string name="default_hours">8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accountant">Accountant</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="holidays">Holidays</string>

</resources>