<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_user">


    <fragment
        android:id="@+id/nav_add_user"
        android:name="com.igec.admin.fragments.AddUserFragment"
        android:label="@string/add_user"
        tools:layout="@layout/fragment_add_user" />
    <fragment
        android:id="@+id/nav_add_project"
        android:name="com.igec.admin.fragments.AddProjectFragment"
        android:label="@string/add_project"
        tools:layout="@layout/fragment_add_project" />
    <fragment
        android:id="@+id/nav_add_machine"
        android:name="com.igec.admin.fragments.AddMachineFragment"
        android:label="@string/add_machine"
        tools:layout="@layout/fragment_add_machine" />


    <fragment
        android:id="@+id/nav_users"
        android:name="com.igec.admin.fragments.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users" />
    <fragment
        android:id="@+id/nav_projects"
        android:name="com.igec.admin.fragments.ProjectsFragment"
        android:label="@string/projects"
        tools:layout="@layout/fragment_projects" />
    <fragment
        android:id="@+id/nav_machines"
        android:name="com.igec.admin.fragments.MachinesFragment"
        android:label="@string/machines"
        tools:layout="@layout/fragment_machines" />


    <fragment
        android:id="@+id/nav_vacation_requests"
        android:name="com.igec.common.fragments.VacationRequestsFragment"
        android:label="@string/vacation_requests"
        tools:layout="@layout/fragment_vacation_requests" />
    <fragment
        android:id="@+id/nav_vacations_log"
        android:name="com.igec.common.fragments.VacationsLogFragment"
        android:label="@string/vacations_log"
        tools:layout="@layout/fragment_vacations_log" />
    <fragment
        android:id="@+id/nav_summary"
        android:name="com.igec.admin.fragments.SummaryFragment"
        android:label="@string/summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/nav_accountant"
        android:name="com.igec.admin.fragments.AccountantFragment"
        android:label="@string/accountant"
        tools:layout="@layout/fragment_accountant" />


</navigation>