<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddMachineFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cover_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/vhigh"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginEnd="@dimen/vhigh"
        android:layout_marginBottom="@dimen/mid"
        android:scaleType="centerCrop"
        app:civ_border_width="0dp"
        app:civ_border_color="@color/black"
        android:src="@drawable/ic_baseline_image_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vhigh"
        android:layout_marginTop="@dimen/vhigh"
        android:layout_marginEnd="@dimen/vhigh"
        app:boxBackgroundMode="outline"
        app:endIconDrawable="@drawable/ic_baseline_autorenew_24"
        app:errorIconDrawable="@drawable/ic_baseline_autorenew_24"
        app:endIconMode="custom"
        app:endIconTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cover_image_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/machine_id"
            android:inputType="text"
            android:padding="14dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serial_number_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vhigh"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginEnd="@dimen/vhigh"
        app:boxBackgroundMode="outline"
        app:endIconDrawable="@drawable/ic_barcode"
        app:errorIconDrawable="@drawable/ic_barcode"
        app:endIconMode="custom"
        app:endIconTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/serial_number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/machine_serial_number"
            android:inputType="number"
            android:padding="14dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/purchase_date_layout"
        style="@style/DatePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vhigh"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginEnd="@dimen/vhigh"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serial_number_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchase_date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/machine_purchase_date"
            android:inputType="date"
            android:padding="14dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/day_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vhigh"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginEnd="@dimen/mid"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/week_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/purchase_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/day_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/perDay"
            android:inputType="numberDecimal"
            android:padding="14dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/week_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mid"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginEnd="@dimen/mid"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/month_layout"
        app:layout_constraintStart_toEndOf="@+id/day_layout"
        app:layout_constraintTop_toBottomOf="@+id/purchase_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/week_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PerWeek"
            android:inputType="numberDecimal"
            android:padding="14dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/month_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mid"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginEnd="@dimen/vhigh"
        app:boxBackgroundMode="outline"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/week_layout"
        app:layout_constraintTop_toBottomOf="@+id/purchase_date_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/month_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PerMonth"
            android:inputType="numberDecimal"
            android:padding="14dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high"
        android:layout_marginBottom="@dimen/vhigh"
        android:text="@string/add_supplements"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/week_layout" />

    <ImageView
        android:id="@+id/id_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/vhigh"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginEnd="@dimen/vhigh"
        android:layout_marginBottom="@dimen/mid"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_image_24"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vhigh"
        android:text="@string/register"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/vhigh"
        android:layout_marginBottom="@dimen/vhigh"
        android:text="@string/update"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/vhigh"
        android:layout_marginBottom="@dimen/vhigh"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
