<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialogs.AddClientDialog">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/vhigh"
            android:layout_marginEnd="@dimen/vhigh"
            app:boxBackgroundMode="outline"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/company_name"
                android:inputType="textPersonName"
                android:padding="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_layout"
            android:layout_marginStart="@dimen/vhigh"
            android:layout_marginTop="@dimen/low"
            android:layout_marginEnd="@dimen/vhigh"
            app:boxBackgroundMode="outline"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/company_email"
                android:inputType="textEmailAddress"
                android:padding="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_marginStart="@dimen/vhigh"
            android:layout_marginTop="@dimen/low"
            android:layout_marginEnd="@dimen/vhigh"
            app:boxBackgroundMode="outline"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/company_phone_number"
                android:inputType="phone"
                android:padding="14dp"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_layout"
            android:layout_marginStart="@dimen/vhigh"
            android:layout_marginEnd="@dimen/vhigh"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/per_hour_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/mid"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:helperTextEnabled="true"
                app:suffixText="%">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/per_hour_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/per_hour"
                    android:inputType="numberDecimal"

                    android:padding="14dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/over_time_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/mid"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:helperTextEnabled="true"
                app:suffixText="%">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/over_time_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/over_time"
                    android:inputType="numberDecimal"
                    android:padding="14dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/per_friday_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundMode="outline"
                app:helperTextEnabled="true"
                app:suffixText="%">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/per_friday_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/per_friday"
                    android:inputType="numberDecimal"
                    android:padding="14dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/container"
            android:layout_marginStart="@dimen/vhigh"
            android:layout_marginTop="@dimen/low"
            android:layout_marginEnd="@dimen/vhigh"
            app:boxBackgroundMode="outline"
            app:counterEnabled="true"
            app:counterMaxLength="250"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_edit"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="top"
                android:hint="@string/note"
                android:inputType="textMultiLine"
                android:padding="14dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/note_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/Done"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="@dimen/mid" />

    </RelativeLayout>
</RelativeLayout>